# dreygur.github.io

./: .env.local  .gitignore  .rustfmt.toml  404.html  404.md  CNAME  Cargo.toml  README.md  Trunk.toml  _config.yml  about.md  asset-manifest.json  index.html  index.md  load_repos.js  package.json  params.json  reload.sh  tailwind.config.js  tsconfig.json  types.d.ts
.github/workflows/: node.js.yml
_data/: blog.json
_layouts/: 404.html  about.html  default.html
_posts/: 2025-08-10-rust-systems-programming.md  2025-09-15-docker-kubernetes-guide.md
api/: posts.json
assets/css/: style.scss
assets/js/: 404.js
blog/: building-scalable-apis.html  docker-kubernetes-guide.html  modern-frontend-architecture.html  post.html  rust-systems-programming.html  typescript-advanced-patterns.html
c/: index.md
css/: style.css  yelp-opensource.css
js/: loaders.js
js/data/: _reload.sh  load_members.js  load_repos.js
old_site/: CNAME  README.md  _config.yml  about.md
old_site/_layouts/: default.html
posts/: 2025-08-22-typescript-advanced-patterns.md  2025-09-28-modern-frontend-architecture.md  2025-10-05-building-scalable-apis.md  2025-10-07-welcome.md
public/: CNAME  index.html
src/: App.css  App.scss  App.tsx  body.rs  footer.rs  header.rs  index.scss  index.tsx  info.ts  main.rs  router.rs
src/assets/: projects.json
src/components/: contacts.rs  footer.rs  header.rs  mod.rs  shared.rs
src/pages/: about.rs  contacts.rs  home.rs  mod.rs  not_found.rs
static/css/: main.0b177ae8.css  main.0b177ae8.css.map  main.50cebd67.css  main.50cebd67.css.map  (+6 more)
(+34 files in other folders)
